--- a/2019.fsproj
+++ b/2019.fsproj
@@ -9,7 +9,8 @@
     <Compile Include="Day-1.fs" />
     <Compile Include="Day-2.fs" />
     <Compile Include="Day-3.fs" />
-    <Compile Include="Program.fs" />
     <Compile Include="Day-4.fs" />
+    <Compile Include="Day-5.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
 </Project>
